# BreCol

./: .gitignore  Makefile  README.md  datasets.csv  defaults.yaml  experiments.yaml  manuscript.md  requirements.txt
dbtk-dnabert/: pyproject.toml
helpers/: figure1_hyenadna.py  figure1_tetramer_uc_cap.py  figure1_uc_cap.py  figure2_hyenadna.py  figure2_tetramer_uc_cap.py  figure3_embedding_uc_cap.py  figure3_hyenadna.py  figure3_tetramer_uc_cap.py  figure4_embedding_uc_cap.py  list_embedding_feature_outputs.py  list_uc_cap_feature_outputs.py  manuscript_values.py  publish_blog.py  shared_figure_code.py  shared_table_code.py  table1_tetramer.py  table2_tetramer.py  table2_uc_cap.py  table3_tetramer.py  table3_uc_cap.py  table4_hyenadna.py  table4_tetramer.py  table4_tetramer_uc_cap.py  table4_uc_cap.py  table5_hyenadna.py  table5_tetramer_uc_cap.py  table6_embedding_uc_cap.py  table6_hyenadna.py  table6_tetramer_uc_cap.py  table7_embedding_uc_cap.py  table7_hyenadna.py  table7_setbert.py  table8_auc_comparison.py  table8_setbert.py  table9_auc_comparison.py  table9_setbert.py
hyena_dna/: huggingface_wrapper.py  inference_example.py  standalone_hyenadna.py
hyenadna/: README.md  huggingface_wrapper.py  inference_example.py  pyproject.toml  standalone_hyenadna.py
manuscript/: IEEEtranDOI.bst  appendix.md  figure1_pipelines.odp  manuscript.lyx  manuscript.md  references.bib  table2_tetramer.html  table3_tetramer.html  table4_hyenadna.html  (+12 more)
setbert/: README.md  pyproject.toml
setbert/src/setbert/: __init__.py  base.py  dnabert.py  layers.py  models.py  utils.py
(+76 files in other folders)
