[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "setbert"
version = "0.0.0"
description = "SetBERT (vendored) wrapper/package — flat repackaging of dbtk-setbert + dbtk-dnabert + deepbio-toolkit."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "David W. Ludwig II", email = "davidludwigii@gmail.com" },
]
maintainers = [
  { name = "Jeffrey Dick" },
]
dependencies = [
  # Core runtime deps for the vendored SetBERT / DNABERT implementation.
  "torch>=2.0.0",
  "transformers>=4.26.1",
  "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]
